Fix: z-index of tooltips is too high; tooltips missing in pages table

--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@
         @apply relative
     }
     .tooltip:after {
-        @apply text-sm absolute z-40 bottom-full left-1/2 overflow-hidden px-2 py-1 opacity-0 -translate-x-1/2 translate-y-2 transition-all rounded-sm text-white bg-black/50 content-[attr(data-tooltip)]
+        @apply text-sm absolute z-10 bottom-full left-1/2 overflow-hidden px-2 py-1 opacity-0 -translate-x-1/2 translate-y-2 transition-all rounded-sm text-white bg-black/50 content-[attr(data-tooltip)]
     }
     .tooltip:hover:after {
         @apply opacity-100 -translate-y-1
